--- a/MultipleChoiceUI/CreateTestWindow.xaml
+++ b/MultipleChoiceUI/CreateTestWindow.xaml
@@ -70,7 +70,7 @@
             <Button 
                 Style="{DynamicResource MaterialDesignRaisedLightButton}"
                 Grid.Column="1" Click="AddQuestion_Click">
-                Add New Question
+                ADD NEW QUESTION
             </Button>
             <Button
                 Grid.Column="4"
@@ -117,7 +117,7 @@
             <Button
                 HorizontalAlignment="Right"
                 Click="SubmitTest_Click">
-                Submit Test
+                SUBMIT TEST
             </Button>
         </Grid>
     </Grid>
