--- a/MultipleChoiceUI/MemoWindow.xaml
+++ b/MultipleChoiceUI/MemoWindow.xaml
@@ -76,7 +76,7 @@
                 x:Name="ReturnToMainMenu"
                 HorizontalAlignment="Right"
                 Margin="0 10 20 10" Click="ReturnToMainMenu_Click">
-        Return to Main Menu
+        RETURN TO MAIN MENU
         </Button>
     </Grid>
 </Window>
