--- a/MultipleChoiceUI/MemoWindow.xaml
+++ b/MultipleChoiceUI/MemoWindow.xaml
@@ -13,7 +13,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         mc:Ignorable="d"
-        Title="MemoWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        Title="Memorandum" Height="450" Width="800" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -41,11 +41,11 @@
                     </TextBlock>
 
                     <TextBlock
+                        x:Name="Mark"
                         Style="{DynamicResource MaterialDesignBody2TextBlock}"
                         Margin="0 10 0 10"
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Center">
-                        Memorandum
                     </TextBlock>
                 </Grid>
             </materialDesign:ColorZone>
