I added an ability to view class lists and added error checking

--- a/MultipleChoiceUI/EditQuestionWindow.xaml
+++ b/MultipleChoiceUI/EditQuestionWindow.xaml
@@ -97,6 +97,7 @@
             </TextBox>
             <RadioButton
                 x:Name="RadioButtonA"
+                IsChecked="True"
                 Grid.Row="1" Grid.Column="2"
                 VerticalAlignment="Center"
                 Margin="10">
