--- a/MultipleChoiceUI/StudentMenuWindow.xaml
+++ b/MultipleChoiceUI/StudentMenuWindow.xaml
@@ -44,6 +44,7 @@
                         Student Main Menu
                     </TextBlock>
                     <TextBlock Padding="10 0 0 10" 
+                               x:Name="Welcome"
                                Style="{DynamicResource MaterialDesignSubheadingTextBlock}"
                                HorizontalAlignment="Left" 
                                VerticalAlignment="Bottom">
