--- a/MultipleChoiceUI/LoginWindow.xaml
+++ b/MultipleChoiceUI/LoginWindow.xaml
@@ -13,7 +13,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
 
-        Title="Login" Height="276" Width="544" WindowStartupLocation="CenterScreen" BorderBrush="{StaticResource PrimaryHueDarkBrush}" BorderThickness="1" ResizeMode="CanMinimize">
+        Title="Login" Height="276" Width="428.805" WindowStartupLocation="CenterScreen" BorderBrush="{StaticResource PrimaryHueDarkBrush}" BorderThickness="1" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -30,24 +30,27 @@
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
 
+        <!-- Navbar section -->
         <Grid Grid.Column="0" Grid.Row="1">
-            <Rectangle 
-                Fill="{DynamicResource PrimaryHueDarkBrush}" 
-                Height="60" 
-                VerticalAlignment="Top"/>
-            <TextBlock 
-                Style="{DynamicResource MaterialDesignTitleTextBlock}"
-                VerticalAlignment="Center" 
-                HorizontalAlignment="Center">
-                Multiple Choice Test System
-            </TextBlock>
+            <materialDesign:ColorZone
+                Mode="PrimaryMid">
+                <Grid>
+                    <Rectangle Height="60" 
+                               VerticalAlignment="Top" />
+                    <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}" 
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center">
+                        MULTIPLE CHOICE TEST SYSTEM
+                    </TextBlock>
+                </Grid>
+            </materialDesign:ColorZone>
         </Grid>
 
         <Grid Grid.Column="0" Grid.Row="2" Margin="20 20 0 0">
             <TextBlock Style="{DynamicResource MaterialDesignTitleTextBlock}">Login To Your Account</TextBlock>
         </Grid>
 
-        <Grid Grid.Column="0" Grid.Row="3" Margin="20 0 20 0">
+        <Grid Grid.Column="0" Grid.Row="3" Margin="20 0 0 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
